[package]
name = "math-and-algorithm"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
math-and-algorithm-001 = { alias = "001", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_a" }
math-and-algorithm-002 = { alias = "002", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_b" }
math-and-algorithm-003 = { alias = "003", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_c" }
math-and-algorithm-004 = { alias = "004", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_d" }
math-and-algorithm-005 = { alias = "005", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_e" }
math-and-algorithm-006 = { alias = "006", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_f" }
math-and-algorithm-007 = { alias = "007", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_g" }
math-and-algorithm-008 = { alias = "008", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_h" }
math-and-algorithm-009 = { alias = "009", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_i" }
math-and-algorithm-010 = { alias = "010", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_j" }
math-and-algorithm-011 = { alias = "011", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_k" }
math-and-algorithm-012 = { alias = "012", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_l" }
math-and-algorithm-013 = { alias = "013", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_m" }
math-and-algorithm-014 = { alias = "014", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_n" }
math-and-algorithm-015 = { alias = "015", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_o" }
math-and-algorithm-016 = { alias = "016", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_p" }
math-and-algorithm-017 = { alias = "017", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_q" }
math-and-algorithm-018 = { alias = "018", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_r" }
math-and-algorithm-019 = { alias = "019", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_s" }
math-and-algorithm-020 = { alias = "020", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_t" }
math-and-algorithm-021 = { alias = "021", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_u" }
math-and-algorithm-022 = { alias = "022", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_v" }
math-and-algorithm-023 = { alias = "023", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_w" }
math-and-algorithm-024 = { alias = "024", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_x" }
math-and-algorithm-025 = { alias = "025", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_y" }
math-and-algorithm-026 = { alias = "026", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_z" }
math-and-algorithm-027 = { alias = "027", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_aa" }
math-and-algorithm-028 = { alias = "028", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/dp_a" }
math-and-algorithm-029 = { alias = "029", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_ab" }
math-and-algorithm-030 = { alias = "030", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/dp_d" }
math-and-algorithm-031 = { alias = "031", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_ac" }
math-and-algorithm-032 = { alias = "032", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_ad" }
math-and-algorithm-033 = { alias = "033", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_ae" }
math-and-algorithm-034 = { alias = "034", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_af" }
math-and-algorithm-035 = { alias = "035", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_ag" }
math-and-algorithm-036 = { alias = "036", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/abc168_c" }
math-and-algorithm-037 = { alias = "037", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_ah" }
math-and-algorithm-038 = { alias = "038", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_ai" }
math-and-algorithm-039 = { alias = "039", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_aj" }
math-and-algorithm-040 = { alias = "040", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_ak" }
math-and-algorithm-041 = { alias = "041", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_al" }
math-and-algorithm-042 = { alias = "042", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/abc172_d" }
math-and-algorithm-043 = { alias = "043", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_am" }
math-and-algorithm-044 = { alias = "044", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_an" }
math-and-algorithm-045 = { alias = "045", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/typical90_bz" }
math-and-algorithm-046 = { alias = "046", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/abc007_3" }
math-and-algorithm-047 = { alias = "047", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_ao" }
math-and-algorithm-048 = { alias = "048", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/arc084_b" }
math-and-algorithm-049 = { alias = "049", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_ap" }
math-and-algorithm-050 = { alias = "050", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_aq" }
math-and-algorithm-051 = { alias = "051", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_ar" }
math-and-algorithm-052 = { alias = "052", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/abc145_d" }
math-and-algorithm-053 = { alias = "053", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_as" }
math-and-algorithm-054 = { alias = "054", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_at" }
math-and-algorithm-055 = { alias = "055", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_au" }
math-and-algorithm-056 = { alias = "056", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_av" }
math-and-algorithm-057 = { alias = "057", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_aw" }
math-and-algorithm-058 = { alias = "058", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_ax" }
math-and-algorithm-059 = { alias = "059", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_ay" }
math-and-algorithm-060 = { alias = "060", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_az" }
math-and-algorithm-061 = { alias = "061", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_ba" }
math-and-algorithm-062 = { alias = "062", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/abc167_d" }
math-and-algorithm-063 = { alias = "063", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bb" }
math-and-algorithm-064 = { alias = "064", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bc" }
math-and-algorithm-065 = { alias = "065", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/panasonic2020_b" }
math-and-algorithm-066 = { alias = "066", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bd" }
math-and-algorithm-067 = { alias = "067", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/typical90_d" }
math-and-algorithm-068 = { alias = "068", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_be" }
math-and-algorithm-069 = { alias = "069", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/abc178_b" }
math-and-algorithm-070 = { alias = "070", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/abc075_d" }
math-and-algorithm-071 = { alias = "071", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bf" }
math-and-algorithm-072 = { alias = "072", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/jsc2021_c" }
math-and-algorithm-073 = { alias = "073", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bg" }
math-and-algorithm-074 = { alias = "074", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bh" }
math-and-algorithm-075 = { alias = "075", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bi" }
math-and-algorithm-076 = { alias = "076", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/abc186_d" }
math-and-algorithm-077 = { alias = "077", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bj" }
math-and-algorithm-078 = { alias = "078", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bk" }
math-and-algorithm-079 = { alias = "079", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/abc139_d" }
math-and-algorithm-080 = { alias = "080", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bl" }
math-and-algorithm-081 = { alias = "081", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bm" }
math-and-algorithm-082 = { alias = "082", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bn" }
math-and-algorithm-083 = { alias = "083", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/typical90_n" }
math-and-algorithm-084 = { alias = "084", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/panasonic2020_c" }
math-and-algorithm-085 = { alias = "085", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bo" }
math-and-algorithm-086 = { alias = "086", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bp" }
math-and-algorithm-087 = { alias = "087", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bq" }
math-and-algorithm-088 = { alias = "088", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/arc107_a" }
math-and-algorithm-089 = { alias = "089", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_by" }
math-and-algorithm-090 = { alias = "090", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/typical90_y" }
math-and-algorithm-091 = { alias = "091", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_br" }
math-and-algorithm-092 = { alias = "092", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bs" }
math-and-algorithm-093 = { alias = "093", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/typical90_al" }
math-and-algorithm-094 = { alias = "094", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/abc140_c" }
math-and-algorithm-095 = { alias = "095", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/typical90_j" }
math-and-algorithm-096 = { alias = "096", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/abc204_d" }
math-and-algorithm-097 = { alias = "097", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bt" }
math-and-algorithm-098 = { alias = "098", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bu" }
math-and-algorithm-099 = { alias = "099", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/typical90_am" }
math-and-algorithm-100 = { alias = "100", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bv" }
math-and-algorithm-101 = { alias = "101", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/typical90_o" }
math-and-algorithm-102 = { alias = "102", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/arc117_c" }
math-and-algorithm-103 = { alias = "103", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bw" }
math-and-algorithm-104 = { alias = "104", problem = "https://atcoder.jp/contests/math-and-algorithm/tasks/math_and_algorithm_bx" }

[[bin]]
name = "math-and-algorithm-001"
path = "src/bin/001.rs"

[[bin]]
name = "math-and-algorithm-002"
path = "src/bin/002.rs"

[[bin]]
name = "math-and-algorithm-003"
path = "src/bin/003.rs"

[[bin]]
name = "math-and-algorithm-004"
path = "src/bin/004.rs"

[[bin]]
name = "math-and-algorithm-005"
path = "src/bin/005.rs"

[[bin]]
name = "math-and-algorithm-006"
path = "src/bin/006.rs"

[[bin]]
name = "math-and-algorithm-007"
path = "src/bin/007.rs"

[[bin]]
name = "math-and-algorithm-008"
path = "src/bin/008.rs"

[[bin]]
name = "math-and-algorithm-009"
path = "src/bin/009.rs"

[[bin]]
name = "math-and-algorithm-010"
path = "src/bin/010.rs"

[[bin]]
name = "math-and-algorithm-011"
path = "src/bin/011.rs"

[[bin]]
name = "math-and-algorithm-012"
path = "src/bin/012.rs"

[[bin]]
name = "math-and-algorithm-013"
path = "src/bin/013.rs"

[[bin]]
name = "math-and-algorithm-014"
path = "src/bin/014.rs"

[[bin]]
name = "math-and-algorithm-015"
path = "src/bin/015.rs"

[[bin]]
name = "math-and-algorithm-016"
path = "src/bin/016.rs"

[[bin]]
name = "math-and-algorithm-017"
path = "src/bin/017.rs"

[[bin]]
name = "math-and-algorithm-018"
path = "src/bin/018.rs"

[[bin]]
name = "math-and-algorithm-019"
path = "src/bin/019.rs"

[[bin]]
name = "math-and-algorithm-020"
path = "src/bin/020.rs"

[[bin]]
name = "math-and-algorithm-021"
path = "src/bin/021.rs"

[[bin]]
name = "math-and-algorithm-022"
path = "src/bin/022.rs"

[[bin]]
name = "math-and-algorithm-023"
path = "src/bin/023.rs"

[[bin]]
name = "math-and-algorithm-024"
path = "src/bin/024.rs"

[[bin]]
name = "math-and-algorithm-025"
path = "src/bin/025.rs"

[[bin]]
name = "math-and-algorithm-026"
path = "src/bin/026.rs"

[[bin]]
name = "math-and-algorithm-027"
path = "src/bin/027.rs"

[[bin]]
name = "math-and-algorithm-028"
path = "src/bin/028.rs"

[[bin]]
name = "math-and-algorithm-029"
path = "src/bin/029.rs"

[[bin]]
name = "math-and-algorithm-030"
path = "src/bin/030.rs"

[[bin]]
name = "math-and-algorithm-031"
path = "src/bin/031.rs"

[[bin]]
name = "math-and-algorithm-032"
path = "src/bin/032.rs"

[[bin]]
name = "math-and-algorithm-033"
path = "src/bin/033.rs"

[[bin]]
name = "math-and-algorithm-034"
path = "src/bin/034.rs"

[[bin]]
name = "math-and-algorithm-035"
path = "src/bin/035.rs"

[[bin]]
name = "math-and-algorithm-036"
path = "src/bin/036.rs"

[[bin]]
name = "math-and-algorithm-037"
path = "src/bin/037.rs"

[[bin]]
name = "math-and-algorithm-038"
path = "src/bin/038.rs"

[[bin]]
name = "math-and-algorithm-039"
path = "src/bin/039.rs"

[[bin]]
name = "math-and-algorithm-040"
path = "src/bin/040.rs"

[[bin]]
name = "math-and-algorithm-041"
path = "src/bin/041.rs"

[[bin]]
name = "math-and-algorithm-042"
path = "src/bin/042.rs"

[[bin]]
name = "math-and-algorithm-043"
path = "src/bin/043.rs"

[[bin]]
name = "math-and-algorithm-044"
path = "src/bin/044.rs"

[[bin]]
name = "math-and-algorithm-045"
path = "src/bin/045.rs"

[[bin]]
name = "math-and-algorithm-046"
path = "src/bin/046.rs"

[[bin]]
name = "math-and-algorithm-047"
path = "src/bin/047.rs"

[[bin]]
name = "math-and-algorithm-048"
path = "src/bin/048.rs"

[[bin]]
name = "math-and-algorithm-049"
path = "src/bin/049.rs"

[[bin]]
name = "math-and-algorithm-050"
path = "src/bin/050.rs"

[[bin]]
name = "math-and-algorithm-051"
path = "src/bin/051.rs"

[[bin]]
name = "math-and-algorithm-052"
path = "src/bin/052.rs"

[[bin]]
name = "math-and-algorithm-053"
path = "src/bin/053.rs"

[[bin]]
name = "math-and-algorithm-054"
path = "src/bin/054.rs"

[[bin]]
name = "math-and-algorithm-055"
path = "src/bin/055.rs"

[[bin]]
name = "math-and-algorithm-056"
path = "src/bin/056.rs"

[[bin]]
name = "math-and-algorithm-057"
path = "src/bin/057.rs"

[[bin]]
name = "math-and-algorithm-058"
path = "src/bin/058.rs"

[[bin]]
name = "math-and-algorithm-059"
path = "src/bin/059.rs"

[[bin]]
name = "math-and-algorithm-060"
path = "src/bin/060.rs"

[[bin]]
name = "math-and-algorithm-061"
path = "src/bin/061.rs"

[[bin]]
name = "math-and-algorithm-062"
path = "src/bin/062.rs"

[[bin]]
name = "math-and-algorithm-063"
path = "src/bin/063.rs"

[[bin]]
name = "math-and-algorithm-064"
path = "src/bin/064.rs"

[[bin]]
name = "math-and-algorithm-065"
path = "src/bin/065.rs"

[[bin]]
name = "math-and-algorithm-066"
path = "src/bin/066.rs"

[[bin]]
name = "math-and-algorithm-067"
path = "src/bin/067.rs"

[[bin]]
name = "math-and-algorithm-068"
path = "src/bin/068.rs"

[[bin]]
name = "math-and-algorithm-069"
path = "src/bin/069.rs"

[[bin]]
name = "math-and-algorithm-070"
path = "src/bin/070.rs"

[[bin]]
name = "math-and-algorithm-071"
path = "src/bin/071.rs"

[[bin]]
name = "math-and-algorithm-072"
path = "src/bin/072.rs"

[[bin]]
name = "math-and-algorithm-073"
path = "src/bin/073.rs"

[[bin]]
name = "math-and-algorithm-074"
path = "src/bin/074.rs"

[[bin]]
name = "math-and-algorithm-075"
path = "src/bin/075.rs"

[[bin]]
name = "math-and-algorithm-076"
path = "src/bin/076.rs"

[[bin]]
name = "math-and-algorithm-077"
path = "src/bin/077.rs"

[[bin]]
name = "math-and-algorithm-078"
path = "src/bin/078.rs"

[[bin]]
name = "math-and-algorithm-079"
path = "src/bin/079.rs"

[[bin]]
name = "math-and-algorithm-080"
path = "src/bin/080.rs"

[[bin]]
name = "math-and-algorithm-081"
path = "src/bin/081.rs"

[[bin]]
name = "math-and-algorithm-082"
path = "src/bin/082.rs"

[[bin]]
name = "math-and-algorithm-083"
path = "src/bin/083.rs"

[[bin]]
name = "math-and-algorithm-084"
path = "src/bin/084.rs"

[[bin]]
name = "math-and-algorithm-085"
path = "src/bin/085.rs"

[[bin]]
name = "math-and-algorithm-086"
path = "src/bin/086.rs"

[[bin]]
name = "math-and-algorithm-087"
path = "src/bin/087.rs"

[[bin]]
name = "math-and-algorithm-088"
path = "src/bin/088.rs"

[[bin]]
name = "math-and-algorithm-089"
path = "src/bin/089.rs"

[[bin]]
name = "math-and-algorithm-090"
path = "src/bin/090.rs"

[[bin]]
name = "math-and-algorithm-091"
path = "src/bin/091.rs"

[[bin]]
name = "math-and-algorithm-092"
path = "src/bin/092.rs"

[[bin]]
name = "math-and-algorithm-093"
path = "src/bin/093.rs"

[[bin]]
name = "math-and-algorithm-094"
path = "src/bin/094.rs"

[[bin]]
name = "math-and-algorithm-095"
path = "src/bin/095.rs"

[[bin]]
name = "math-and-algorithm-096"
path = "src/bin/096.rs"

[[bin]]
name = "math-and-algorithm-097"
path = "src/bin/097.rs"

[[bin]]
name = "math-and-algorithm-098"
path = "src/bin/098.rs"

[[bin]]
name = "math-and-algorithm-099"
path = "src/bin/099.rs"

[[bin]]
name = "math-and-algorithm-100"
path = "src/bin/100.rs"

[[bin]]
name = "math-and-algorithm-101"
path = "src/bin/101.rs"

[[bin]]
name = "math-and-algorithm-102"
path = "src/bin/102.rs"

[[bin]]
name = "math-and-algorithm-103"
path = "src/bin/103.rs"

[[bin]]
name = "math-and-algorithm-104"
path = "src/bin/104.rs"

[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.20.0"
alga = "=0.9.3"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.2"
regex = "=1.3.6"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.3.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.6", features = ["derive"] }
text_io = "=0.1.8"
whiteread = "=0.5.0"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"

[dev-dependencies]
